--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,3 +100,9 @@ input[type="radio"] + label > img {
     width: 30px;
     height: 30px;
 }
+
+.bilhete {
+    border: 1px solid gray;
+    border-radius: 10px;
+    padding: 15px;
+}
